rough version for test.

--- a/rpicard/static/html/index.html
+++ b/rpicard/static/html/index.html
@@ -32,10 +32,12 @@
             <div id="moving_panel" class="moving panel">
                 <div id="moving_container" class="container">
                     <div id="forward_btn" class="button">
-                        <img class="unclicked_button" src="/resource?t=4&path=forward" />
+                        &#8679;
+                        <!--<img class="unclicked_button" src="/resource?t=4&path=forward" />-->
                     </div>            
                     <div id="backward_btn" class="button">
-                        <img class="unclicked_button" src="/resource?t=4&path=backward" />
+                        &#8681; 
+                        <!--<img class="unclicked_button" src="/resource?t=4&path=backward" />-->
                     </div>
                 </div>
             </div>
