change of webui

--- a/rpicard/static/html/index.html
+++ b/rpicard/static/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
     <head>
         <title>Rpi Car</title>
@@ -7,7 +7,7 @@
         <script src="/resource?t=2&path=car"></script>
     </head>
     <body onload="init(4)">
-        <div class="h_container">
+        <div class="whole">
             <div id="rotation_panel" class="rotation panel">
                 <div id="rotation_container" class="container">
                     <div id="outer_cycle" class="outer_cycle container">
